--- a/downtoearth/templates/layout.html
+++ b/downtoearth/templates/layout.html
@@ -1,62 +1,61 @@
-<!DOCTYPE html> 
-<html>
-<head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
     <meta charset="utf-8">
-    <title>{% block title %} {% endblock %} | Makkar Labs</title>
+    <title>Bootstrap, from Twitter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <!-- favicon -->
-    <!--<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">-->
-    <!-- CSS -->
-    <link href="{{url_for('static',filename = 'bootstrap/css/bootstrap.css')}}" rel="stylesheet">
-    <link rel="stylesheet" href="{{url_for('static',filename = 'bootstrap/css/bootstrap-responsive.css')}}">
-    <link href="{{url_for('static',filename = 'css/styles.css')}}" rel="stylesheet">
-    <script type="text/javascript" src="{{url_for('static', filename='js/lib/jquery.min.js')}}"></script>
-    {% block includes %} {% endblock %}
-</head>
-<body>
- 
-<div class="container" id="nav">
-    <div class="row-fluid">
-    <a id="home" class="brand" href="/" title="Makkar Labs">
-        <!--<img src="{{url_for('static', filename='img/logo.png')}}" class="logo" />-->
-        Makkar Labs
-    </a>
-    <div id="navbar">
-        {% if not current_user.id or current_user.id=="" %}
-        <a id="signin" class="minor {% block signin_active %}inactive{% endblock %}" href="{{url_for_security('login')}}" title="Sign In">
-             Sign In |
-        </a>    
-        <a id="register" class="minor {% block signup_active %}inactive{% endblock %}" href="{{url_for_security('register')}}" title="Register">
-            Register
-        </a> 
-        {% endif %}
-        {% if current_user.id and current_user.id > 0 %}
-        <a class="minor {% block signout_active %}inactive{% endblock %}" href="{{url_for_security('logout')}}" title="Sign Out">
-             Sign Out
-        </a>
-        {% endif %}
-    </div>
-    </div>
-</div>
-<div id="body">
-    <div class="container">
-        <div class="row">
-            <div class="span12">
-                {% block body %} {% endblock %}
-            </div>
-        </div>
-    </div>
-</div>
-   
-<footer class="container">
-    <hr>
-    <p class="foot-big"> Makkar Labs 2013</p>
-</footer>
-<script>
-//Insert Google Analytics Code here
-</script>
 
-</body>
+    <!-- Le styles -->
+    <link rel="stylesheet" href="{{url_for('static',filename = 'bootstrap/css/bootstrap.css')}}">
+    <style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+      .sidebar-nav {
+        padding: 9px 0;
+      }
+
+      @media (max-width: 980px) {
+        /* Enable use of floated navbar text */
+        .navbar-text.pull-right {
+          float: none;
+          padding-left: 5px;
+          padding-right: 5px;
+        }
+      }
+    </style>
+    <link href="{{url_for('static',filename = 'bootstrap/css/bootstrap-responsive.css')}}" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="../assets/js/html5shiv.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <i class="icon-search icon-white"></i>
+          </button>
+          <a class="brand" href="#">Grapevine</a>
+          <div class="nav-collapse collapse">
+            <form class="navbar-search pull-right">
+                <input type="text" class="search-query" placeholder="Search">
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    {% block body %}{% endblock %}
+
+    <script src="{{url_for('static',filename = 'js/jquery-2.0.3.min.js')}}"></script>
+    <script src="{{url_for('static',filename = 'js/bootstrap.js')}}"></script>
+  </body>
 </html>
