--- a/downtoearth/templates/layout.html
+++ b/downtoearth/templates/layout.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link rel="stylesheet" href="{{url_for('static',filename = 'bootstrap/css/bootstrap.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename = 'css/bootstrap.css')}}">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -27,7 +27,7 @@
         }
       }
     </style>
-    <link href="{{url_for('static',filename = 'bootstrap/css/bootstrap-responsive.css')}}" rel="stylesheet">
+    <link href="{{url_for('static',filename = 'css/bootstrap-responsive.css')}}" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
