--- a/downtoearth/templates/layout.html
+++ b/downtoearth/templates/layout.html
@@ -40,13 +40,16 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <button type="button" class="btn btn-navbar trans" data-toggle="collapse" data-target=".nav-collapse">
             <i class="icon-search icon-white"></i>
           </button>
           <a class="brand" href="#">Grapevine</a>
           <div class="nav-collapse collapse">
             <form class="navbar-search pull-right">
-                <input type="text" class="search-query" placeholder="Search">
+                <div class="input-append">
+                  <input type="text" class="input-large" placeholder="Search">
+                  <button class="btn btn-navbar trans" type="button"><i class="icon-search icon-white"></i></button>
+                </div>
             </form>
           </div>
         </div>
