--- a/downtoearth/static/css/bootstrap.css
+++ b/downtoearth/static/css/bootstrap.css
@@ -4814,7 +4814,14 @@ input[type="submit"].btn.btn-mini {
   border-color: #252525;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff111111', GradientType=0);
 }
-
+.trans {
+  background: transparent !important;
+}
+.cent {
+  margin-right: auto;
+  margin-left: auto;
+  width: 50%;
+}
 .navbar-inverse .brand,
 .navbar-inverse .nav > li > a {
   color: #999999;
