--- a/downtoearth/templates/layout.html
+++ b/downtoearth/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap, from Twitter</title>
+    <title>{% block title %}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -28,11 +28,14 @@
       }
     </style>
     <link href="{{url_for('static',filename = 'css/bootstrap-responsive.css')}}" rel="stylesheet">
+    <script src="{{url_for('static',filename = 'js/jquery-2.0.3.min.js')}}"></script>
+    <script src="{{url_for('static',filename = 'js/bootstrap.js')}}"></script>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="../assets/js/html5shiv.js"></script>
     <![endif]-->
+    {% block includes %}{% endblock %}
   </head>
 
   <body>
@@ -58,7 +61,5 @@
 
     {% block body %}{% endblock %}
 
-    <script src="{{url_for('static',filename = 'js/jquery-2.0.3.min.js')}}"></script>
-    <script src="{{url_for('static',filename = 'js/bootstrap.js')}}"></script>
   </body>
 </html>
