--- a/downtoearth/templates/layout.html
+++ b/downtoearth/templates/layout.html
@@ -28,6 +28,7 @@
       }
     </style>
     <link href="{{url_for('static',filename = 'css/bootstrap-responsive.css')}}" rel="stylesheet">
+    <link href="{{url_for('static',filename = 'css/styles.css')}}" rel="stylesheet">
     <script src="{{url_for('static',filename = 'js/jquery-2.0.3.min.js')}}"></script>
     <script src="{{url_for('static',filename = 'js/bootstrap.js')}}"></script>
 
