--- a/downtoearth/templates/work.html
+++ b/downtoearth/templates/work.html
@@ -16,14 +16,11 @@
             $.post("/api/list/restaurants", function(data) {
                 var resList = res_list(data);
                 $("#rest_list").html(resList);
-                $("div.item").click(function() {
-                    $.ajax({
-                        type: "POST",
-                        url: "/api/list/items",
-                        data: "{'store_name': '" + data.data.name + "'}",
-                        success: function(data1) {
-                            var resList = items_list(data1);
-                            $("rest_list").html(resList);
+                $("div.enclosure").click(function(data1) {
+                    console.log($(this).attr('data-name'));
+                    $.post( "/api/list/menu", "{'store_name': '" + $(this).attr('data-name') + "'}", function() {
+                        var resList = items_list(data1);
+                        $("rest_list").html(resList);
                     });
                 });
             });
