--- a/downtoearth/templates/security/register_user.html
+++ b/downtoearth/templates/security/register_user.html
@@ -11,14 +11,14 @@
 {% block body %}
 
     <div class="container">
-        {% macro social_login(provider_id, display_name) %}
-          <form action="{{ url_for('social.login', provider_id=provider_id) }}" method="POST">
-              <input type="submit" value="Login with {{ display_name }}" />
-          </form>
-        {% endmacro %}
+    {% macro social_register(provider_id, display_name) %}
+      <form action="{{ url_for('social.login', provider_id=provider_id) }}" method="POST">
+          <button type="submit" class="btn btn-primary btn-large">Register with {{ display_name }}</button>
+      </form>
+    {% endmacro %}
+    {{ social_register('facebook', 'Facebook' )}}
 
-        {{ social_login('facebook', 'Facebook' )}}
-       {% with messages = get_flashed_messages() %}
+    {% with messages = get_flashed_messages() %}
          {% if messages %}
              <ul class=flashes>
                  {% for message in messages %}
@@ -27,6 +27,7 @@
              </ul>
          {% endif %}
        {% endwith %} 
+ 
     </div>
 
 
