--- a/downtoearth/templates/additem.html
+++ b/downtoearth/templates/additem.html
@@ -9,7 +9,7 @@
 
 {% block body %}
     <div id="additem" class="container-fluid">
-        <form class="" id="add-item" action="/add_item" method="POST">
+        <form class="" id="add-item" action="/additem" method="POST">
         {{ additem_form.hidden_tag() }}
 
         <div>Store Name {{ additem_form.store_name() }} </div>
