--- a/downtoearth/static/css/styles.css
+++ b/downtoearth/static/css/styles.css
@@ -6,6 +6,17 @@
     max-width: 64px;
     max-height: 64px;
 }
+.itemCom {
+    padding: 10px;
+    background: #eee;
+}
+.itemCom:hover {
+    border-bottom: 1px solid #ddd;
+}
+.thumbs:hover {
+    text-decoration: none;
+    color: #000;
+}
 .item {
     padding: 10px;
     border-bottom: 1px solid #ddd;
