--- a/downtoearth/static/css/styles.css
+++ b/downtoearth/static/css/styles.css
@@ -9,6 +9,7 @@
 .itemCom {
     padding: 10px;
     background: #eee;
+    border-bottom: 1px solid #ddd;
 }
 .itemCom:hover {
     border-bottom: 1px solid #ddd;
