--- a/downtoearth/templates/work.html
+++ b/downtoearth/templates/work.html
@@ -8,18 +8,18 @@
 {% endblock %}
 
 {% block body %}
-    <div id="rest_list" class="container-fluid">
+    <div id="res_List" class="container-fluid">
     </div>
 
     <script type="text/javascript">
         $(document).ready(function(data) {
             $.post("/api/list/restaurants", function(data) {
                 var resList = res_list(data);
-                $("#rest_list").html(resList);
+                $("#res_List").html(resList);
                 $("div.enclosure").click(function() {
                     window.location.href = "/restaurants/" + $(this).attr('data-name');
                 });
             });
         });
     </script>
-{% endblock %}  
+{% endblock %}
