--- a/downtoearth/templates/layout.html
+++ b/downtoearth/templates/layout.html
@@ -61,6 +61,8 @@
     <div id="rest_list">
     {% block body %}{% endblock %}
     </div>
+    <div id="tweet_list">
+    </div>
   <script type="text/javascript">
     $(document).ready(function(data) {
       $("#open").click(function() {
